# ah-premium-lab

./: .editorconfig  .gitignore  AGENTS.md  PROJECT_LOG.md  README.md  diagnose_backtest_run.py  pyproject.toml  start_web_ui.bat  start_web_ui.ps1  stop_web_ui.bat  stop_web_ui.ps1
config/: ah_pairs.csv  ah_pairs_full.csv
examples/: akquant_ha_report.html
scripts/: check.ps1
src/ha_backtest/: __init__.py  cli.py  data.py  runner.py  strategy.py  web.py
src/ha_backtest/core/: __init__.py  backtest.py  context.py  output.py  registry.py  target_weights.py
src/ha_backtest/strategies/ha_premium/: __init__.py  description.py  features.py  spec.py  weights.py
src/ha_backtest/strategies/sector_flow/: __init__.py  description.py  features.py  spec.py
tests/: test_output_summary.py  test_web_history.py  test_weights.py
ui/: app.js  index.html  styles.css
